Added youtube integration for news 	modified:   app/models/article.rb 	modified:   app/views/index/_index.html.erb 	modified:   app/views/index/index.html.erb 	modified:   log/development.log 	new file:   public/images/thead.gif 	modified:   public/stylesheets/default.css

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -14,8 +14,8 @@
 
 	</div>
 	<div class="right_content">
-		<div class="sponsor">
-			<p>Just some blank space</p>
+		<div class="video">
+			<p>Latest Videos</p>
 		</div>	
 	</div>
 
