Added user authentication 	new file:   app/controllers/admin_controller.rb 	modified:   app/controllers/application.rb 	modified:   app/controllers/articles_controller.rb 	modified:   app/controllers/index_controller.rb 	new file:   app/controllers/sponsors_controller.rb 	new file:   app/controllers/users_controller.rb 	new file:   app/helpers/admin_helper.rb 	new file:   app/helpers/sponsors_helper.rb 	new file:   app/helpers/users_helper.rb 	new file:   app/models/sponsor.rb 	new file:   app/models/user.rb 	new file:   app/views/admin/index.html.erb 	new file:   app/views/admin/login.html.erb 	new file:   app/views/admin/logout.html.erb 	modified:   app/views/index/index.html.erb 	modified:   app/views/layouts/index.html.erb 	new file:   app/views/layouts/sponsors.html.erb 	new file:   app/views/layouts/users.html.erb 	new file:   app/views/sponsors/edit.html.erb 	new file:   app/views/sponsors/index.html.erb 	new file:   app/views/sponsors/new.html.erb 	new file:   app/views/sponsors/show.html.erb 	new file:   app/views/users/edit.html.erb 	new file:   app/views/users/index.html.erb 	new file:   app/views/users/new.html.erb 	new file:   app/views/users/show.html.erb 	modified:   config/environment.rb 	modified:   config/routes.rb 	new file:   db/migrate/20090315041606_create_sponsors.rb 	new file:   db/migrate/20090315200709_create_sessions.rb 	new file:   db/migrate/20090315201750_create_users.rb 	modified:   db/schema.rb 	modified:   log/development.log 	new file:   public/images/sponsor/1.jpg 	new file:   public/images/sponsor/10.jpg 	new file:   public/images/sponsor/11.jpg 	new file:   public/images/sponsor/12.jpg 	new file:   public/images/sponsor/13.jpg 	new file:   public/images/sponsor/14.jpg 	new file:   public/images/sponsor/15.jpg 	new file:   public/images/sponsor/16.jpg 	new file:   public/images/sponsor/17.jpg 	new file:   public/images/sponsor/18.jpg 	new file:   public/images/sponsor/19.jpg 	new file:   public/images/sponsor/2.jpg 	new file:   pu

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -5,8 +5,6 @@
  
 		<div class="article">
 		<%= will_paginate @articles %>
-				
-
 		<ul>
 			<%= render(:partial => "index") %>
 		</ul>
@@ -14,8 +12,13 @@
 
 	</div>
 	<div class="right_content">
-		<div class="video">
-			<p>Latest Videos</p>
+		<div class="sponsor">
+			<p>Sponsors <a href="mailto:admin@generals.com">(interested in sponsoring us?)</a></p>
+			<div id="s1" class="pics">
+				<% for sponsor in @sponsors %>
+					<%= image_tag( '/images/sponsor/' + sponsor.image_url, :width => 250, :height => 150, :alt => sponsor.title ) %>
+				<% end %>
+			</div>
 		</div>	
 	</div>
 
