--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -3,7 +3,7 @@
 <head>
 	<title>Oceanside Generals - Junior Hockey Club</title>
 	<%= stylesheet_link_tag "default" %>
-	<%= javascript_include_tag :defaults %>
+	<%= javascript_include_tag(:all) %>
 	<%= auto_discovery_link_tag(:rss, :controller => "articles/rss", :action => 'feed') %>
 </head>
 <body>	
